--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=backend-onlinestore
-spring.datasource.url=jdbc:mysql://database-1.c1s2gu86c2l6.us-east-2.rds.amazonaws.com:3306/mydb
+# spring.datasource.url=jdbc:mysql://database-1.c1s2gu86c2l6.us-east-2.rds.amazonaws.com:3306/mydb
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=rootsasa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
